[package]
name    = "alttab"
version = "1.0.2"
edition = "2021"

[[bin]]
name = "alttab"
path = "src/main.rs"

[dependencies]
gtk4             = "0.11"
gtk4-layer-shell = "0.8"
gdk4             = "0.11"
gio              = "0.22"
glib             = "0.22"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
libc             = "0.2"
gio-unix = "0.22.6"
